# SPHERE_electronic

./: README.md
ElectronicsSim3.3/: READ.ME  main  main_mod.cpp  main_mod_.cpp  make_t.sh  mosaic_hits  version.txt
ElectronicsSim3.3/moshits/: moshits_Q2_atm01_0014_10PeV_15_019_500m_c065.moshit.zst  moshits_Q2_atm01_0014_10PeV_15_019_500m_c066.moshit.zst  moshits_Q2_atm01_0014_10PeV_15_019_500m_c067.moshit.zst  moshits_Q2_atm01_0014_10PeV_15_019_500m_c068.moshit.zst  moshits_Q2_atm01_0014_10PeV_15_019_500m_c069.moshit.zst  moshits_Q2_atm01_0014_10PeV_15_019_500m_c070.moshit.zst  moshits_Q2_atm01_0014_10PeV_15_019_500m_c071.moshit.zst  moshits_Q2_atm01_0014_10PeV_15_019_500m_c072.moshit.zst  moshits_Q2_atm01_0014_10PeV_15_019_500m_c073.moshit.zst  moshits_Q2_atm01_0014_10PeV_15_019_500m_c074.moshit.zst  moshits_Q2_atm01_0014_10PeV_15_019_500m_c075.moshit.zst  (+64 more)
SPHERE-3_appro_func/: CLAUDE.md  SPHERE3_pixel_data_A.txt  analysis.ipynb  compare_approx.py  compare_atmospheres.py  compare_sb.py  input.ini  pyproject.toml  read_results.py  setup.py  study_criterion.py
SPHERE-3_appro_func/legacy/: app_utility.py  debug_minuit.py  main.py  minuit_visualization.py  my_criterion.py  test_background_integration.py
SPHERE-3_appro_func/sphere_3_appro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SPHERE-3_appro_func/sphere_appro/: __init__.py  __main__.py  _ldf_core_fallback.py  background.py  config.py  criterion.py  event.py  io_data.py  ldf_core.pyx  ml_classification.py  moshits_binary.py  optimizer.py  separability_map.py  visualization.py  worker.py
